# beacon

./: .gitignore  Cargo.toml  README.md
src/: beacon.rs  cli.rs  daemon.rs  discovery.rs  main.rs  p2p.rs
