[package]
name = "beacon"
version = "0.1.0"
authors = ["dk <davidkasofsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.14.0-alpha.1"
chrono = "0.4.10"
rand = "0.7.3"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
async-std = "^1.0"
futures = "0.3.1"
