[package]
name = "beacon"
version = "0.1.0"
authors = ["dk <davidkasofsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "beacon"
path = "src/beacon.rs"

[[bin]]
name = "beacond"
path = "src/daemon.rs"

[[bin]]
name = "beacon-cli"
path = "src/cli.rs"

[[bin]]
name = "discovery"
path = "src/discovery.rs"

[dependencies]
libp2p = "0.15.0"
chrono = "0.4.10"
rand = "0.7.3"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
async-std = "^1.0"
futures = "0.3.1"
hex = "0.4"
